--- a/app/views/Data/styles.module.css
+++ b/app/views/Data/styles.module.css
@@ -1,4 +1,21 @@
 .data-page {
     display: flex;
     flex-grow: 1;
+    align-items: center;
+    justify-content: center;
+
+    .drop-zone {
+        display: flex;
+        flex-direction: column;
+        gap: var(--mantine-spacing-sm);
+        align-items: center;
+        border-radius: var(--mantine-radius-sm);
+        background-color: var(--mantine-color-white);
+        padding: var(--mantine-spacing-md);
+        max-width: 300px;
+
+        .drop-text {
+            text-align: center;
+        }
+    }
 }
