--- a/app/views/Data/styles.module.css
+++ b/app/views/Data/styles.module.css
@@ -7,15 +7,10 @@
     .drop-zone {
         display: flex;
         flex-direction: column;
-        gap: var(--mantine-spacing-sm);
+        gap: var(--mantine-spacing-md);
         align-items: center;
-        border-radius: var(--mantine-radius-sm);
-        background-color: var(--mantine-color-white);
+        border-radius: var(--mantine-radius-md);
         padding: var(--mantine-spacing-md);
-        max-width: 300px;
-
-        .drop-text {
-            text-align: center;
-        }
+        max-width: 250px;
     }
 }
