--- a/app/views/Data/styles.module.css
+++ b/app/views/Data/styles.module.css
@@ -19,6 +19,8 @@
             .grid-column {
                 display: flex;
                 flex-direction: column;
+                align-items: center;
+                justify-content: center;
             }
         }
     }
