feat: add update mutation

--- a/app/views/Data/Workspace/ImportTable/styles.module.css
+++ b/app/views/Data/Workspace/ImportTable/styles.module.css
@@ -21,8 +21,8 @@
 
             .table-properties-container {
                 display: flex;
-                flex-basis: 20%;
                 flex-direction: column;
+                flex-shrink: 0;
                 gap: var(--mantine-spacing-sm);
                 background-color: var(--mantine-color-gray-1);
                 padding: var(--mantine-spacing-md) var(--mantine-spacing-sm);
@@ -40,9 +40,7 @@
 
             .table-container {
                 display: flex;
-                position: relative;
-                flex-basis: 80%;
-                justify-content: center;
+                flex-grow: 1;
                 max-height: 45vh;
                 overflow: auto;
 
