--- a/app/views/Data/styles.module.css
+++ b/app/views/Data/styles.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-grow: 1;
     justify-content: center;
+    overflow: auto;
 
     .loader {
         align-self: center;
