feat: add import table to workspace mutation

--- a/app/views/Data/styles.module.css
+++ b/app/views/Data/styles.module.css
@@ -4,6 +4,11 @@
     justify-content: center;
     overflow: auto;
 
+    .nav-links {
+        display: flex;
+        flex-direction: column;
+    }
+
     .loader {
         align-self: center;
     }
