--- a/app/views/Data/Workspace/ImportTable/TablePropertiesForm/styles.module.css
+++ b/app/views/Data/Workspace/ImportTable/TablePropertiesForm/styles.module.css
@@ -6,11 +6,12 @@
     gap: var(--mantine-spacing-sm);
     background-color: var(--mantine-color-gray-1);
     padding: var(--mantine-spacing-md) var(--mantine-spacing-sm);
+    overflow: auto;
 
     .form {
         display: flex;
         flex-direction: column;
-        gap: var(--mantine-spacing-md);
+        gap: var(--mantine-spacing-xs);
 
         .icon {
             color: var(--mantine-color-gray-5);
