--- a/app/views/Data/Workspace/ImportTable/styles.module.css
+++ b/app/views/Data/Workspace/ImportTable/styles.module.css
@@ -17,19 +17,13 @@
 
         .content {
             display: flex;
-            flex-grow: 1;
+            flex-direction: column;
             gap: var(--mantine-spacing-sm);
 
             .table-container {
                 display: flex;
-                flex-grow: 1;
-                max-height: 50vh;
-                overflow: auto;
-
-                .alert {
-                    display: flex;
-                    align-items: center;
-                }
+                gap: var(--mantine-spacing-md);
+                max-height: 60vh;
             }
         }
 
