fix: use API to fetch imported tables

--- a/app/views/Data/Workspace/styles.module.css
+++ b/app/views/Data/Workspace/styles.module.css
@@ -6,6 +6,7 @@
 
     .workspace {
         display: flex;
+        position: relative;
         flex-grow: 1;
         flex-wrap: wrap;
         gap: var(--mantine-spacing-xl);
