feat: add rename mutation

--- a/app/views/Data/Workspace/styles.module.css
+++ b/app/views/Data/Workspace/styles.module.css
@@ -14,3 +14,27 @@
         padding: var(--mantine-spacing-xl);
     }
 }
+
+.rename-input {
+
+    :global {
+        .mantine-TextInput-wrapper {
+            display: flex;
+        }
+
+        .mantine-TextInput-rightSection{
+            position: unset;
+        }
+    }
+
+    .rename-submit-refresh{
+        display: flex;
+        gap: var(--mantine-spacing-xs);
+        font-size: var(--mantine-font-size-md);
+        
+        .rename-submit {
+            color: var(--mantine-color-green-5);
+        }
+    }
+}
+
