feat: add set relationship between tables modal

--- a/app/views/Data/Workspace/styles.module.css
+++ b/app/views/Data/Workspace/styles.module.css
@@ -16,25 +16,19 @@
 }
 
 .rename-input {
+    display: flex;
 
-    :global {
-        .mantine-TextInput-wrapper {
-            display: flex;
-        }
-
-        .mantine-TextInput-rightSection{
-            position: unset;
-        }
+    .right-section {
+        position: unset;
     }
 
     .rename-submit-refresh{
         display: flex;
         gap: var(--mantine-spacing-xs);
         font-size: var(--mantine-font-size-md);
-        
+
         .rename-submit {
             color: var(--mantine-color-green-5);
         }
     }
 }
-
