feat: add work table data and menu

--- a/app/views/Data/Workspace/WorkTable/styles.module.css
+++ b/app/views/Data/Workspace/WorkTable/styles.module.css
@@ -13,3 +13,10 @@
         color: var(--mantine-color-gray-6);
     }
 }
+
+.column-header {
+    font-size: var(--mantine-font-size-sm);
+    color: var(--mantine-color-dark-9);
+    font-weight: 700;
+    width: max-content;
+}
