--- a/app/views/Data/Workspace/ImportTable/PreviewTable/styles.module.css
+++ b/app/views/Data/Workspace/ImportTable/PreviewTable/styles.module.css
@@ -2,4 +2,9 @@
     display: flex;
     flex-grow: 1;
     overflow: auto;
+
+    .scroll-area {
+        display: flex;
+        flex-grow: 1;
+    }
 }
