feat: add listView table

--- a/app/views/Data/Workspace/WorkTable/styles.module.css
+++ b/app/views/Data/Workspace/WorkTable/styles.module.css
@@ -5,6 +5,11 @@
     .table-view-properties {
         border-radius: 5px;
         background-color: var(--mantine-color-gray-2);
+
+        .action-icon-active {
+            color: white;
+            background-color: var(--mantine-color-brand-5);
+        }
     }
 
     .table-status-button {
