--- a/app/views/Data/Workspace/WorkTable/styles.module.css
+++ b/app/views/Data/Workspace/WorkTable/styles.module.css
@@ -1,11 +1,13 @@
 .tab-view {
     display: flex;
+    flex-direction: column;
     gap: 1rem;
     overflow: auto;
 
     .tab {
         overflow: auto;
     }
+
     .table-status-button {
         background-color: var(--mantine-color-gray-2);
         color: var(--mantine-color-gray-6);
@@ -20,14 +22,17 @@
     font-weight: 700;
 }
 
-.tab-panel {
-    display: flex;
-    flex-grow: 1;
-    max-height: 60vh;
-    overflow: auto;
+.tab-panel-wrapper {
+    width: 100%;
 
-    .scroll-area {
+    .tab-panel {
         display: flex;
-        flex-grow: 1;
+        max-height: 60vh;
+        overflow: auto;
+
+        .scroll-area {
+            display: flex;
+            flex-grow: 1;
+        }
     }
 }
