--- a/app/views/Data/Workspace/JoinModal/styles.module.css
+++ b/app/views/Data/Workspace/JoinModal/styles.module.css
@@ -1,14 +1,26 @@
-.join-modal-flex {
+.join-modal {
     flex-grow: 1;
     overflow: auto;
 
     .join-modal-form {
-        flex-basis: 30%;
+        flex-basis: 35%;
         flex-shrink: 0;
+        background-color: var(--mantine-color-gray-1);
+        padding: var(--mantine-spacing-md) var(--mantine-spacing-sm);
+
+        .icon {
+            color: var(--mantine-color-gray-5);
+        }
     }
 
     .join-modal-table {
+        flex-basis: 65%;
         flex-grow: 1;
         overflow: auto;
+
+        .text {
+            display: flex;
+            flex-grow: 1;
+        }
     }
 }
