--- a/app/views/Data/Workspace/ImportTable/PreviewTable/styles.module.css
+++ b/app/views/Data/Workspace/ImportTable/PreviewTable/styles.module.css
@@ -6,5 +6,11 @@
     .scroll-area {
         display: flex;
         flex-grow: 1;
+
+        .table-heading {
+            position: sticky;
+            top: 0;
+            background-color: var(--mantine-color-gray-1);
+        }
     }
 }
