--- a/app/views/Data/Workspace/JoinModal/styles.module.css
+++ b/app/views/Data/Workspace/JoinModal/styles.module.css
@@ -2,32 +2,34 @@
     display: flex;
     overflow: auto;
 
-    .form-container {
-        display: flex;
-        flex-grow: 1;
-        overflow: auto;
+    .body {
+        word-break: unset;
 
-        .join-modal-form {
-            display: flex;
-            flex-basis: 30%;
-            background-color: var(--mantine-color-gray-1);
-            padding: var(--mantine-spacing-md) var(--mantine-spacing-sm);
-
-            .icon {
-                color: var(--mantine-color-gray-5);
-            }
-        }
-
-        .join-modal-table {
+        .form-container {
             display: flex;
             flex-grow: 1;
-            overflow: auto;
 
-            .text {
+            .join-modal-form {
                 display: flex;
-                flex-grow: 1;
+                flex-basis: 30%;
+                background-color: var(--mantine-color-gray-1);
+                padding: var(--mantine-spacing-md) var(--mantine-spacing-sm);
+
+                .icon {
+                    color: var(--mantine-color-gray-5);
+                }
+            }
+
+            .join-modal-table {
+                display: flex;
+                max-height: 60vh;
+                overflow: auto;
+
+                .text {
+                    display: flex;
+                    flex-grow: 1;
+                }
             }
         }
     }
-
 }
