fix: add column type icons

--- a/app/views/Data/Workspace/WorkTable/styles.module.css
+++ b/app/views/Data/Workspace/WorkTable/styles.module.css
@@ -5,9 +5,12 @@
     font-weight: 700;
 }
 
-.active {
+.menu-Item{
     display: flex;
     gap: var(--mantine-spacing-sm);
+}
+
+.active {
     background-color: var(--mantine-color-indigo-1);
 }
 
