fix: modal size

--- a/app/components/TableWithStatusBar/styles.module.css
+++ b/app/components/TableWithStatusBar/styles.module.css
@@ -6,10 +6,11 @@
 
     .tab {
         overflow: auto;
-
-        .stats {
-            margin-left: auto;
+        .tab-list {
+            display: flex;
+            justify-content: space-between;
         }
+
     }
 
     .table-status-button {
